<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:descendantFocusability="blocksDescendants"
    android:layout_margin="@dimen/margin"
    android:orientation="horizontal"
    >
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/red"
        app:fabSize="mini"
        app:srcCompat="@android:drawable/presence_busy" />

    <ImageView
        android:id="@+id/img"
        android:adjustViewBounds="true"
        android:layout_height="match_parent"
        android:layout_width="80dp"
        />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_margin="@dimen/margin"
        >

        <TextView
            android:id="@+id/viewDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/OrderDate"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/viewNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/OrderNumber"
            android:textStyle="bold"
            android:textSize="24sp"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/viewModel"
                android:hint="@string/ModelName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                />

            <TextView
                android:id="@+id/viewVIN"
                android:hint="@string/VIN"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="@dimen/margin"
        >
        <CheckBox
            android:id="@+id/chbIsSynced"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/IsSynced" />

        <TextView
            android:id="@+id/viewPhotoCo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/PhotoCo"
            android:textSize="10sp" />
    </LinearLayout>

</LinearLayout>



