<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorBackground"
    android:focusable="true"
    android:focusableInTouchMode="true"
    >




    <EditText
        android:id="@+id/editNumber"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:textSize="32sp"
        android:hint="@string/OrderNumber"
        android:importantForAutofill="no"
        android:inputType="number"
        android:imeOptions="actionDone"
        tools:targetApi="o" />


    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"

        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        >
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/viewDate"
                android:hint="@string/OrderDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="8dp"
                >
                <TextView
                    android:id="@+id/viewVIN"
                    android:hint="@string/VIN"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/viewModel"
                    android:hint="@string/ModelName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"/>

            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/btnSync"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:drawableStart="@android:drawable/ic_menu_upload"
            android:text="@string/btnSync" />

    </LinearLayout>


    <android.support.v7.widget.RecyclerView
        android:id="@+id/imageGallery"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="@dimen/padding_small"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:orientation="horizontal"
        android:layout_marginBottom="8dp"
        >
        <Button
            android:id="@+id/btnTakePhoto"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="Сделать фото"
            android:drawableTop="@android:drawable/ic_menu_camera"
            />
    </LinearLayout>
</LinearLayout>